--- a/front-end/css/agregarXSR.css
+++ b/front-end/css/agregarXSR.css
@@ -3,11 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;;
   height: 100vh;
   text-align: center;
   padding: 20px;
-  background: #2c3e50;
+  background: #2c3e69;
   color: #fff;
 }
 
@@ -18,12 +18,19 @@ header {
   align-items: center;
   width: 100%;
   max-width: 400px;
+  margin-top: 0; /* Elimina el espacio superior */
   margin-bottom: 20px;
+  position: relative;
+  top: 0; /* Asegúrate de que no esté bajando el header */
+  padding-top: 50px; /* Opcional, ajusta si necesitas algo de espacio */
 }
 
 header h1 {
-  font-size: 1.5em;
-  margin: 0;
+  font-size: 1.2em;
+  margin: -0;
+  position: relative;
+  top: 0; /* Elimina desplazamiento vertical */
+  font-weight: 80;
 }
 
 .back-btn, .close-btn {
@@ -41,15 +48,15 @@ header h1 {
 form {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  width: 100%;
+  gap: 12px; /*separa los input*/
+  width: 110%; /*largo*/
   max-width: 400px;
 }
 
 .foto-placeholder {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto 20px;
+  width: 0px;
+  height: 150px;
+  margin: 0 auto 10px; /*mas arriba el formulario*/
   background: #34495e;
   border-radius: 50%;
   display: flex;
@@ -57,41 +64,46 @@ form {
   justify-content: center;
 }
 
-.camera-icon {
-  width: 50px;
-  height: 50px;
-  filter: brightness(0) invert(1);
-}
+
 
 input[type="text"], input[type="file"], select {
-  padding: 12px;
+  padding: 10px; /*grandor*/
   border: none;
-  border-radius: 10px;
-  background: #34495e;
-  color: #fff;
-  font-size: 1em;
-  width: 100%;
+  border-radius: 50px;
+  background: #7b8c9c;
+  color: #2c377b;
+  font-size: 1em; /*grande de las letras*/
+  width: 100%; /*largor de los input*/
   box-sizing: border-box;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
 }
 
 input[type="file"] {
-  padding: 10px;
+  padding: 20px;
 }
 
 input[type="text"]::placeholder, select {
-  color: #bdc3c7;
+  color: #062a43;
+
 }
 
 .save-btn {
   padding: 12px;
-  background-color: #34c759;
+  background-color: #66d481;
   color: white;
   border: none;
-  border-radius: 10px;
+  border-radius: 50px;
   font-size: 1em;
   font-weight: 600;
   cursor: pointer;
   transition: background-color 0.3s;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
 }
 
 .save-btn:hover {
